[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/tornado.png" type="Texture" id=1]
[ext_resource path="res://Script/Tornado.gd" type="Script" id=2]
[ext_resource path="res://Sprite/effect_4.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 18.5 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0270936, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.19459, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Tornado" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -0.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
amount = 10
lifetime = 0.1
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
angular_velocity = -100.0
damping = 100.0
damping_random = 1.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.25
scale_amount_curve = SubResource( 3 )
color = Color( 0.34902, 0.886275, 1, 1 )
color_ramp = SubResource( 4 )

[node name="TornadoSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Tornado_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
